Fixed time select test some more

--- a/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
+++ b/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
@@ -30,7 +30,7 @@
   </p>
   
   <p>
-    <button mat-button color="primary" class="submit-event" [disabled]="isFormInvalid" (click)="submitForm()">Add</button>
+    <button mat-button color="primary" class="submit-event" [disabled]="isFormInvalid" (click)="submitForm()">Apply</button>
     <button mat-button color="secondary" class="cancel-event" (click)="cancelForm()">Cancel</button>
   </p>
 </div>
