--- a/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
+++ b/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
@@ -1,7 +1,7 @@
 <div class="event">
   <div>
-    <p>Event: <span class="event-name">{{event.name}}</span></p>
-    <p>Start Time: <span class="start-time">{{event.startTime}}</span></p>
+    <p>Event: <span class="event-name">{{event?.name}}</span></p>
+    <p>Start Time: <span class="start-time">{{event?.startTime}}</span></p>
   </div>
   <div>
     <button mat-button class="enable-editing" (click)="enableEditing()">Edit</button>
