Added routing to event-page

--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
@@ -1,5 +1,5 @@
 <section class="event-card-list">
-  <mat-card class="event" *ngFor="let event of eventList"
+  <mat-card class="event-card" *ngFor="let event of eventList"
     (click)="viewEventDetails(event)">
     <mat-card-header>
     </mat-card-header>
