--- a/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
@@ -1,6 +1,6 @@
 <app-main-menu>
   <section id="event-page">
     <h1>{{event?.name}}</h1>
-    <app-event-details [event]="event"></app-event-details>
+    <app-event-details [event]="event" (submitEvent)="updateEvent($event)"></app-event-details>
   </section>
 </app-main-menu>
