--- a/apps/ubipong-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/ubipong-ui/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-main-menu>
 
-  <div id="tournament-list">
+  <div id="tournament-page">
     <h1>Tournaments</h1>
   
     <mat-accordion *ngIf="isLoggedIn" id="accordion-add-tournament">
@@ -35,6 +35,8 @@
       </mat-expansion-panel>
     </mat-accordion>
   
+    <p></p>
+
     <app-tournament-list [tournamentList]="tournamentList"
       (viewTournamentPage)="navigateToTournamentPage($event)">
     </app-tournament-list>
