Move to details only if event title is clicked

--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.scss
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.scss
@@ -6,7 +6,8 @@ section.event-card-list {
 
   mat-card.event-card {
     margin: .5rem 0;
-    :hover {
+
+    .event-name {
       cursor: pointer;
     }
 
