--- a/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
+++ b/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div *ngIf="editEnabled" class="edit-panel">
+<div *ngIf="isEditEventFormOpen" class="edit-panel">
   <p>
     <mat-form-field class="event-name">
       <mat-label>Name</mat-label>
