--- a/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
+++ b/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
@@ -3,7 +3,7 @@
     <p>Start Time: <span class="start-time">{{event?.startTime}}</span></p>
   </div>
   <div>
-    <button mat-button class="enable-editing" (click)="enableEditing()">Edit</button>
+    <button *ngIf="isEditingEnabled" mat-button class="enable-editing" (click)="enableEditing()">Edit</button>
   </div>
 </div>
 
