--- a/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
@@ -2,6 +2,7 @@
   <section id="event-page">
     <h1>{{event?.name}}</h1>
 
-    <app-event-details [event]="event" (submitEvent)="updateEvent($event)"></app-event-details>
+    <app-event-details [event]="event" [isEditingEnabled]="isLoggedIn" (submitEvent)="updateEvent($event)">
+    </app-event-details>
   </section>
 </app-main-menu>
