--- a/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
+++ b/apps/ubipong-ui/src/app/components/event-details/event-details.component.html
@@ -46,7 +46,7 @@
   </p>
  
   <p>
-    <button mat-button color="primary" class="submit-event" [disabled]="isFormInvalid" (click)="submitForm()">Apply</button>
+    <button mat-button color="primary" class="submit-event" [disabled]="isFormInvalid" (click)="submitForm()">Save</button>
     <button mat-button color="secondary" class="cancel-event" (click)="cancelForm()">Cancel</button>
   </p>
 </div>
