Moved app.component

--- a/apps/ubipong-ui/src/app/app.component.html
+++ b/apps/ubipong-ui/src/app/app.component.html
@@ -1,1 +1,2 @@
-<ubipong-ui-ng-nx-welcome></ubipong-ui-ng-nx-welcome>
+<title>UbiPong Table Tennis Tournament Manager</title>
+<router-outlet></router-outlet>
