--- a/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
@@ -2,7 +2,14 @@
   <section id="event-page">
     <h1>{{event?.name}}</h1>
 
-    <app-event-editor [event]="event" [isEditingEnabled]="isLoggedIn" (submitEvent)="updateEvent($event)">
+    <div>
+      <p>Start Time: <span class="start-time">{{event?.startTime}}</span></p>
+    </div>
+    <div>
+      <button *ngIf="isLoggedIn" mat-button class="enable-editing">Edit</button>
+    </div>
+
+    <app-event-editor [event]="event" (submitEvent)="updateEvent($event)">
     </app-event-editor>
   </section>
 </app-main-menu>
