Close event editor when selecting Cancel

--- a/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/event-page/event-page.component.html
@@ -11,7 +11,8 @@
       </button>
     </div>
 
-    <app-event-editor *ngIf="isEventEditorOpen" [event]="event" (submitEvent)="updateEvent($event)">
+    <app-event-editor *ngIf="isEventEditorOpen" [event]="event"
+      (submitEvent)="updateEvent($event)" (cancelEvent)="toggleEventEditor()">
     </app-event-editor>
   </section>
 </app-main-menu>
