Added menu to navigate to single match sheet

--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard">Home</a>
       <a mat-list-item routerLink="/event-player-list">RR Group Tool</a>
+      <a mat-list-item routerLink="/single-match-sheet">Single Match Sheet</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
