Added basic elements in single match sheet

--- a/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
+++ b/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
@@ -1,1 +1,9 @@
 <p>single-match-sheet works!</p>
+<h1 class="eventName">{{eventName}}</h1>
+<h2 class="roundName">{{roundName}}</h2>
+<p class="playerName">{{player1Name}}</p>
+<p class="playerName">{{player2Name}}</p>
+
+<p class="score"></p>
+<p class="score"></p>
+
