Use kebab case for CSS classes

--- a/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
+++ b/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
@@ -1,9 +1,15 @@
-<p>single-match-sheet works!</p>
-<h1 class="eventName">{{eventName}}</h1>
-<h2 class="roundName">{{roundName}}</h2>
-<p class="playerName">{{player1Name}}</p>
-<p class="playerName">{{player2Name}}</p>
-
-<p class="score"></p>
-<p class="score"></p>
+<div class="single-match-sheet">
+  <h1 class="event-name">{{eventName}}</h1>
+  <h2 class="round-name">{{roundName}}</h2>
+  <p>
+    <span class="player-name">{{player1Name}}</span>
+    vs
+    <span class="player-name">{{player2Name}}</span>
+  </p>
+  
+  <section class="score-grid">
+    <p class="score"></p>
+    <p class="score"></p>
+  </section>
+</div>
 
