--- a/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
+++ b/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
@@ -8,8 +8,16 @@
   </p>
 
   <section class="score-grid">
-    <p class="score"></p>
-    <p class="score"></p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
+    <p class="score">_____</p>
   </section>
 </div>
 
