--- a/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.scss
+++ b/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.scss
@@ -3,3 +3,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.score-grid {
+  margin: auto;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 0 3em;
+}
