Customizable number of games

--- a/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
+++ b/apps/ubipong-ui/src/app/components/single-match-sheet/single-match-sheet.component.html
@@ -8,16 +8,7 @@
   </p>
 
   <section class="score-grid">
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
-    <p class="score">_____</p>
+    <p *ngFor="let index of scoreSpaceRange" class="score">_____</p>
   </section>
 </div>
 
