Use range to create single match sheets

--- a/apps/ubipong-ui/src/app/pages/single-match-sheet-page/single-match-sheet-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/single-match-sheet-page/single-match-sheet-page.component.html
@@ -1,4 +1,1 @@
-<app-single-match-sheet></app-single-match-sheet>
-<app-single-match-sheet></app-single-match-sheet>
-<app-single-match-sheet></app-single-match-sheet>
-<app-single-match-sheet></app-single-match-sheet>
+<app-single-match-sheet *ngFor="let i of singleMatchSheetRange"></app-single-match-sheet>
