--- a/apps/ubipong-ui/src/app/pages/single-match-sheet-page/single-match-sheet-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/single-match-sheet-page/single-match-sheet-page.component.html
@@ -1,1 +1,5 @@
-<app-single-match-sheet *ngFor="let i of singleMatchSheetRange"></app-single-match-sheet>
+<div id="single-match-sheet-page">
+  <div *ngFor="let i of singleMatchSheetRange">
+    <app-single-match-sheet></app-single-match-sheet>
+  </div>
+</div>
