Corrected page ID of dashboard page

--- a/apps/ubipong-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/ubipong-ui/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-main-menu>
 
-  <div id="tournament-page">
+  <div id="dashboard-page">
     <h1>Tournaments</h1>
   
     <mat-accordion *ngIf="isLoggedIn" id="accordion-add-tournament">
