Use toLocaleString to format time

--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
@@ -9,7 +9,7 @@
       </section>
       <section>
         <div class="challonge-url"><a target="_new" href="https://challonge.com/{{event.challongeUrl}}">{{event.challongeUrl}}</a></div>
-        <div class="event-start-time">{{event.startTime | date : 'hh:mm'}}</div>
+        <div class="event-start-time">{{formatTime(event.startTime)}}</div>
       </section>
     </mat-card-content>
     <mat-card-actions>
