--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
@@ -13,7 +13,7 @@
       </section>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button class="button-round-robin-match-sheet"
+      <button mat-button class="button-round-robin-match-sheet" [disabled]="isRoundRobinMatchSheetDisabled(event.status)"
         color="primary" (click)="viewRoundRobinMatchSheet(event)">
         View Match Sheet
       </button>
