Use event-card in event-list

--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
@@ -1,22 +1,7 @@
 <section class="event-card-list">
-  <mat-card class="event-card" *ngFor="let event of eventList">
-    <mat-card-header>
-    </mat-card-header>
-    <mat-card-content>
-      <section>
-        <mat-card-title class="event-name" (click)="viewEventDetails(event)">{{event.name}}</mat-card-title>
-        <div class="event-status">{{event.status}}</div>
-      </section>
-      <section>
-        <div class="challonge-url"><a target="_new" href="https://challonge.com/{{event.challongeUrl}}">{{event.challongeUrl}}</a></div>
-        <div class="event-start-time">{{formatTime(event.startTime)}}</div>
-      </section>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button class="button-round-robin-match-sheet" [disabled]="isRoundRobinMatchSheetDisabled(event.status)"
-        color="primary" (click)="viewRoundRobinMatchSheet(event)">
-        View Match Sheet
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <app-event-card *ngFor="let event of eventList"
+    [event]="event"
+    (viewRoundRobinMatchSheet)="viewRoundRobinMatchSheet($event)"
+    (viewEventDetails)="viewEventDetails($event)">
+  </app-event-card>
 </section>
